--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@dhlx/resolver",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "/dist/index.js",
   "type": "module",
   "types": "/dist",
+  "exports": {
+    "types": "./dist/index.d.ts",
+    "default": "./dist/index.js"
+  },
   "scripts": {
     "tsc": "tsc",
     "test": "ava"
