--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "private": false,
   "author": "lidenghui <3379489032@qq.com>",
   "license": "MIT",
-  "description": "",
+  "description": "resolver 是一个强大的 TypeScript 工具函数，用于处理异步函数的执行结果，统一进行错误处理和结果包装，让您的异步代码更加简洁和可靠。",
   "devDependencies": {
     "ava": "^6.1.3",
     "typescript": "^5.6.2"
-  }
+  },
+  "keywords": [
+    "promise",
+    "error",
+    "resolve",
+    "reject"
+  ]
 }
